# ChillPatcher

./: .gitignore  .gitmodules  ChillPatcher.csproj  ChillPatcher.sln  CoreDependencyLoader.cs  INSTALL.md  MyPluginInfo.cs  Plugin.cs  PluginConfig.cs  README.md  README_Patch.md  UIFrameworkConfig.cs  build_all.bat  build_release.bat  readme_jp.md
ChillPatcher.Module.LocalFolder/: LocalFolderModule.cs
ChillPatcher.Module.Netease/: ChillPatcher.Module.Netease.csproj  ModuleInfo.cs  NeteaseBridge.cs  NeteaseCoverLoader.cs  NeteaseFavoriteManager.cs  NeteaseModule.cs  NeteasePcmStreamReader.cs  NeteaseSongRegistry.cs  PersonalFMManager.cs  QRLoginManager.cs  SilentPcmReader.cs  deploy.bat
ChillPatcher.SDK/Events/: ModuleEvents.cs
ChillPatcher.SDK/Interfaces/: IModuleConfigManager.cs  IProviders.cs  IRegistry.cs  IStreamingProvider.cs
ChillPatcher.SDK/Models/: AlbumInfo.cs  MusicInfo.cs  TagInfo.cs
ModuleSystem/: ModuleContext.cs  ModuleLoader.cs
ModuleSystem/Registry/: AlbumRegistry.cs  MusicRegistry.cs  TagRegistry.cs
ModuleSystem/Services/: CoreAudioLoader.cs  CoverService.cs
Native/: SmtcBridge.cs
NativePlugins/SmtcBridge/: CMakeLists.txt  README.md  build.bat
NativePlugins/SmtcBridge/include/: smtc_bridge.h
NativePlugins/SmtcBridge/src/: smtc_bridge.cpp
NativePlugins/SmtcBridge/test/: smtc_test.cpp
Patches/: AchievementsPatch.cs  BulbulConstantPatch.cs  EntryBehaviorPatch.cs  EventBrokerPatch.cs  ExamplePatch.cs  KeyboardHookPatch.cs  LanguagePatch.cs  SteamAPIPatch.cs  SystemAudioMonitor_Patches.cs  SystemMediaTransport_Patches.cs  UIRearrangePatch.cs
Patches/Rime/: RimeEngine.cs
Patches/UIFramework/: AudioPlayer_Update_Patch.cs  FacilityMusic_UpdateFacility_Patch.cs  MusicPlayListButtons_Patches.cs  MusicService_Excluded_Patch.cs  MusicService_Favorite_Patch.cs  MusicService_GetProgress_Patch.cs  MusicService_PlaylistOrder_Patch.cs  MusicService_SetProgress_Patch.cs  MusicTagListUI_Patches.cs  MusicUI_AlbumArt_Patch.cs  MusicUI_Patches.cs  PlayQueuePatch.cs  PlaybackState_Patches.cs
RimeDefaultConfig/: luna_pinyin.custom.yaml
UIFramework/Audio/: AlbumArtReader.cs  AudioResourceManager.cs  FileSystemPlaylistProvider.cs  StreamingAudioLoader.cs  SystemAudioMonitor.cs  SystemMediaTransportService.cs  UrlFlacLoader.cs
UIFramework/Data/: CustomPlaylistDataManager.cs  PlaylistDatabase.cs
UIFramework/Music/: AlbumCoverLoader.cs  AlbumHeaderView.cs  AlbumInfo.cs  AlbumManager.cs  MixedVirtualScrollController.cs  MusicUIManager.cs  PlayQueueManager.cs  PlaybackStateManager.cs  PlaylistDirectoryScanner.cs  PlaylistListBuilder.cs  PlaylistListItem.cs  PlaylistMetadata.cs
netease_bridge/: .gitignore  build.bat  main.go  pcm_cache.go  pcm_flac_decoder.go  pcm_seekable_decoder.go  pcm_stream.go  pcm_streaming_decoder.go
rime/RimeDefaultConfig/: default.yaml
